...
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lEJ-AZ-WzX">
                                <rect key="frame" x="16" y="567" width="343" height="46"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Find Movie"/>
                                <connections>
                                    <action selector="didTapFindMovieButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bWU-sF-fLe"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="24" y="83" width="235" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="searchTextField"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="103" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Xgl-uc-nDo">
                                <rect key="frame" x="24" y="144" width="326" height="503"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
...
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X3D-dr-7K7">
                                                    <rect key="frame" x="262" y="72" width="46" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <state key="normal" title="Fav"/>
                                                    <connections>
                                                        <action selector="favButtonSelected:" destination="PWS-k8-x2W" eventType="touchUpInside" id="rON-lP-ZNv"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                        </tableViewCellContentView>
...
                                            <outlet property="movieTitle" destination="YwC-FY-LSl" id="kVu-Rt-0Af"/>
                                            <outlet property="movieYear" destination="xcU-1h-XCc" id="aml-Uf-aU5"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="searchTable"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="SDv-ho-sNe" id="0B5-uI-MPW"/>
                                    <outlet property="delegate" destination="SDv-ho-sNe" id="2kf-a6-6um"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m70-EC-8e6">
                                <rect key="frame" x="289" y="86" width="61" height="27"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <action selector="searchWithSender:" destination="SDv-ho-sNe" eventType="touchDown" id="eSi-GI-gmp"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
